# wazuh

api/api/: middlewares.py
src/: meson.build
src/addagent/: manage_agents.c  manage_agents.h  manage_keys.c  validate.c
src/analysisd/decoders/: ciscat.c  security_configuration_assessment.c  syscollector.c  winevtchannel.c
src/analysisd/decoders/plugins/: json_decoder.c
src/analysisd/format/: json_extended.h  to_json.c
src/config/: syscheck-config.h
src/data_provider/include/: sysInfo.h
src/headers/: agent_op.h  debug_op.h  expression.h  file_op.h  json-queue.h  json_op.h  read-agents.h  regex_op.h  string_op.h  url.h  yaml2json.h
src/monitord/: compress_log.c  monitord.c
src/os_auth/: local-server.c
src/os_csyslogd/: alert.c  csyslogd.h
src/os_execd/: execd.c  wcom.c
src/os_integrator/: integrator.c
src/os_maild/: os_maild_client.c
src/os_zlib/: os_zlib.c
src/remoted/: shared_download.h
src/rootcheck/: config.c  rootcheck.h
src/shared/: agent_op.c  auth_client.c  debug_op.c  file_op.c  fs_op.c
src/shared_modules/common/: commonDefs.h
src/syscheckd/: syscheck.h
src/syscheckd/db/: fim_db.h
src/syscheckd/whodata/: syscheck_audit.c
src/unit_tests/monitord/: test_monitord.c
src/unit_tests/os_execd/: test_execd.c
src/unit_tests/os_regex/: test_os_regex_execute.c
src/unit_tests/wrappers/wazuh/syscheckd/: config_wrappers.h
src/util/: agent_control.c
src/wazuh_db/: wdb.h  wdb_agents.c  wdb_integrity.c  wdb_parser.c
src/wazuh_modules/: wm_control.c  wm_database.c  wm_syscollector.c  wmodules_def.h
src/wazuh_modules/vulnerability_detector/: wm_vuln_detector.c  wm_vuln_detector.h
src/win32/: win_agent.c
